# grit

./: Cargo.toml  README.md
.grit/: config.toml
DevNotes/: RustAnalyzerSkillIssue.md
Features/: CommitConventions.md  CommitTemplates.md  Configuration.md  EmbeddedDocs.md  GitInterop.md  ServerStuff.md  TechnicalNotes.md  Tickets.md  VersionControl.md
src/: main.rs
