[package]
name = "grit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
dirs = "5.0.1"
serde = "1.0.190"
sha2 = "0.10.8"
tokio = "1.33.0"
